src/test/ui-fulldeps/gated-plugin.stderr
error: The specified module could not be found. (os error 126)
  --> $DIR/gated-plugin.rs:3:11
   |
LL | #![plugin(empty_plugin)]
   |           ^^^^^^^^^^^^

error: aborting due to previous error

